--- a/Python_Tips1.ipynb
+++ b/Python_Tips1.ipynb
@@ -2,82 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f0c455a4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting better_profanity\n",
-      "  Downloading better_profanity-0.7.0-py3-none-any.whl.metadata (7.1 kB)\n",
-      "Downloading better_profanity-0.7.0-py3-none-any.whl (46 kB)\n",
-      "   ---------------------------------------- 0.0/46.1 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/46.1 kB ? eta -:--:--\n",
-      "   -------- ------------------------------- 10.2/46.1 kB ? eta -:--:--\n",
-      "   ----------------- ---------------------- 20.5/46.1 kB 162.5 kB/s eta 0:00:01\n",
-      "   ----------------- ---------------------- 20.5/46.1 kB 162.5 kB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.7/46.1 kB 186.2 kB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.7/46.1 kB 186.2 kB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.7/46.1 kB 186.2 kB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.7/46.1 kB 186.2 kB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.7/46.1 kB 186.2 kB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.7/46.1 kB 186.2 kB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.7/46.1 kB 186.2 kB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.7/46.1 kB 186.2 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 41.0/46.1 kB 61.4 kB/s eta 0:00:01\n",
-      "   ---------------------------------------- 46.1/46.1 kB 13.5 kB/s eta 0:00:00\n",
-      "Installing collected packages: better_profanity\n",
-      "Successfully installed better_profanity-0.7.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/SOOQ ELASER/AppData/Local/Microsoft/WindowsApps/python3.11.exe\" -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
    "source": [
     "pip install better_profanity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32f98122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -U ipykernel"
    ]
   },
   {
@@ -185,13 +136,57 @@
    "execution_count": null,
    "id": "a07f73d8",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/SOOQ ELASER/AppData/Local/Microsoft/WindowsApps/python3.11.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World\")\n",
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2d36cdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/SOOQ ELASER/AppData/Local/Microsoft/WindowsApps/python3.11.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "pip install ipykernel\n",
+    "pip install ipykernel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff22f954",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
